--- a/assets/text_atoms/profiling_phrases.yml
+++ b/assets/text_atoms/profiling_phrases.yml
@@ -1,2 +1,31 @@
 phrases:
   - "Behavior suggests {trait} under pressure."
+  - "The pattern points to {trait} rather than chaos."
+  - "Evidence favors a {trait} approach over impulse."
+  - "The scene reads as {trait}, not reckless."
+  - "This looks like {trait} acting in a hurry."
+  - "The offender shows {trait} when challenged."
+  - "The choices here match {trait} and caution."
+  - "The coverage suggests {trait} and planning."
+  - "Risk handling is {trait} rather than bold."
+  - "The timing implies {trait} and patience."
+  - "The restraint hints at {trait} control."
+  - "The mess suggests {trait} under stress."
+  - "The entry method fits {trait} and familiarity."
+  - "The exit path suggests {trait} and preparation."
+  - "The footprint reads {trait}, not opportunistic."
+  - "The choice of target suggests {trait} motives."
+  - "The cleanup points to {trait} experience."
+  - "The improvisation reads {trait} adaptation."
+  - "The staging feels {trait}, not random."
+  - "The silence implies {trait} and avoidance."
+  - "The risk taken suggests {trait} confidence."
+  - "The pattern signals {trait} not panic."
+  - "The evidence gap suggests {trait} awareness."
+  - "The approach indicates {trait} and patience."
+  - "The contact method suggests {trait} social skill."
+  - "The timing suggests {trait} routine."
+  - "The method implies {trait} discipline."
+  - "The escalation points to {trait} volatility."
+  - "The restraint suggests {trait} calculation."
+  - "The scene supports {trait} with clear intent."
