--- a/assets/text_atoms/report_templates.yml
+++ b/assets/text_atoms/report_templates.yml
@@ -1,2 +1,21 @@
 templates:
   - "Time: {time}. Location: {location}. Notes: {notes}."
+  - "At {time}, units responded to {location}. Notes: {notes}."
+  - "Report at {time} from {location}. Notes: {notes}."
+  - "Case log {time} | {location}. {notes}."
+  - "Entry {time} - {location}. {notes}."
+  - "Field note {time} at {location}: {notes}."
+  - "Dispatch {time}, scene {location}. {notes}."
+  - "Incident {time} in {location}. Notes: {notes}."
+  - "Brief {time}: {location}. {notes}."
+  - "Timeline {time} / {location} / {notes}."
+  - "Summary {time} at {location}. {notes}."
+  - "Observation {time}, {location}. {notes}."
+  - "Log update {time}. {location}. {notes}."
+  - "Checkpoint {time} | {location} | {notes}."
+  - "Supervisor note {time} at {location}: {notes}."
+  - "Case note {time} @ {location}: {notes}."
+  - "Record {time}. Location {location}. {notes}."
+  - "Timeline entry {time}. Location: {location}. {notes}."
+  - "Situation {time} - {location}. {notes}."
+  - "Field report {time}, {location}: {notes}."
