--- a/assets/text_atoms/witness_lines.yml
+++ b/assets/text_atoms/witness_lines.yml
@@ -1,3 +1,51 @@
 lines:
-  - "I was home. I did not see anything."
-  - "I heard a shout, then the sirens."
+  - "I was on the corner when it happened."
+  - "I heard arguing from the alley."
+  - "I saw someone leave in a hurry."
+  - "I saw a tall figure by the door."
+  - "I noticed a light on around midnight."
+  - "I heard glass break, then footsteps."
+  - "I passed by and saw the door ajar."
+  - "I saw two people talking near the entrance."
+  - "I heard a car start and speed off."
+  - "I was upstairs; the walls are thin."
+  - "I smelled smoke for a moment."
+  - "I saw someone carrying a bag."
+  - "I heard a thud, like something heavy."
+  - "I saw a person pacing outside."
+  - "I heard a short scream, then silence."
+  - "I saw a coat hanging open and wet."
+  - "I noticed the street was empty."
+  - "I saw a shadow move past the window."
+  - "I heard a door slam."
+  - "I saw someone wipe the handle."
+  - "I heard footsteps running away."
+  - "I saw a figure in a hood."
+  - "I heard a low voice near the stairs."
+  - "I was closing up when I saw a light flicker."
+  - "I saw a person with gloves."
+  - "I heard a phone ring inside."
+  - "I saw a car parked with engine running."
+  - "I heard a knock, then raised voices."
+  - "I saw someone looking around nervously."
+  - "I noticed the back gate was open."
+  - "I heard metal clatter on the ground."
+  - "I saw a person on the fire escape."
+  - "I heard a long pause and then a shout."
+  - "I saw a face through the rain."
+  - "I noticed someone leaving through the side door."
+  - "I heard a dog barking nonstop."
+  - "I saw two people arguing in the street."
+  - "I noticed fresh scratches on the lock."
+  - "I heard someone say a name, then silence."
+  - "I saw someone stand by the mailbox."
+  - "I noticed a broken bottle near the curb."
+  - "I heard heavy breathing close by."
+  - "I saw a person lean into the window."
+  - "I noticed a chair tipped over."
+  - "I heard a short struggle and then a car door."
+  - "I saw someone drop something and pick it up."
+  - "I noticed the lights go out suddenly."
+  - "I heard footsteps on the stairs."
+  - "I saw a person exit and check the street."
+  - "I heard the back door creak."
